--- a/front-end/style/main-style.css
+++ b/front-end/style/main-style.css
@@ -48,6 +48,22 @@ button {
     color: #E5C394;
 }
 
+.part-six-line-white{
+    width: 200px;
+    height: 1px;
+    background-color: white;
+    margin: 0 auto;
+    margin-bottom: 40px;
+}
+
+
+.part-six-line-gold{
+    background-color : #E5C394;
+    width: 200px;
+    height: 1px;
+    margin: 0 auto;
+    margin-bottom: 40px;
+}
 
 
 
@@ -69,7 +85,7 @@ button {
     height: 100%;
     background: linear-gradient(to bottom, #0f0f0f, #070707);
     opacity: 1;
-    z-index: 1000   ;
+    z-index: 1000;
     transition: opacity 0.8s ease-in-out, visibility 0.8s ease-in-out;
 }
 
@@ -118,7 +134,7 @@ button {
     display : flex;
     justify-content : center;
     font-family : 'FONTSPRING DEMO-APPAREL', serif;
-    font-size : 60px;
+    font-size : 70px;
     font-weight: 100;
 }
 
@@ -126,7 +142,7 @@ button {
     display : flex;
     justify-content : center;
     font-family : 'Playfair Display', serif;
-    font-size : 13px;
+    font-size : 15px;
     font-weight: 100;
 }
 
@@ -191,7 +207,6 @@ button {
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    height: 100vh;
     position: relative; 
 }
 
@@ -207,7 +222,6 @@ button {
 
 header {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     width: 100%;
     padding-top : 35px;
@@ -217,9 +231,12 @@ header {
 }
 
 header nav {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-40%);
     display: flex;
-    gap: 60px;
-    padding-right: 10%;
+    align-items: center;
+    gap: 40px;
 }
 
 header nav a {
@@ -233,6 +250,15 @@ header nav a {
 
 header nav a:hover::after {
     width: 100%;
+}
+
+.language-switcher {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding-left: 55px;
+    font-size: 24px;
+    color: white;
 }
 
 /*-----------------LOGO-HEADER-ECLIPSE-----------------*/
@@ -287,7 +313,9 @@ header nav a:hover::after {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 65px;
+    font-family: 'Cormorant Garamond', serif;
+    font-weight: 300;
+    font-size: 85px;
     padding-bottom: 65px;
     line-height: 1;
 }
@@ -358,7 +386,6 @@ header nav a:hover::after {
 /*---------------------PART-TWO--------------------*/
 
 .part-two {
-    z-index: 2;
     margin : 0px;
 }
 
@@ -374,14 +401,16 @@ header nav a:hover::after {
     font-family : 'FONTSPRING DEMO-APPAREL', serif;
     color: white;
     font-size: 85px;
+    padding-bottom : 20px;
 }
 
 .part-two h3 {
     font-family : "Playfair Display", serif;
     color : #E5C394;
     font-weight: 300;
-    font-size: 25px;
+    font-size: 30px;
     padding-bottom : 20px;
+    padding-top: 15px;
 }
 
 .part-two p{
@@ -395,7 +424,7 @@ header nav a:hover::after {
 .scrolling-images-part-two{
     display: flex;
     justify-content: center;
-    padding-top: 70px;
+    padding-top: 40px;
     width : 100%;   
     height : 600px;
     gap : 50px;
@@ -445,55 +474,6 @@ header nav a:hover::after {
 /*--------------PART-TWO-ANIMATION-SCROLLING-------------------*/
 
 
-@keyframes slideLeftFade {
-    0% {
-      transform: translateX(0);
-      opacity: 1;
-    }
-    100% {
-      transform: translateX(-100px);
-      opacity: 0;
-    }
-  }
-  
-  @keyframes slideRightFade {
-    0% {
-      transform: translateX(0);
-      opacity: 1;
-    }
-    100% {
-      transform: translateX(100px);
-      opacity: 0;
-    }
-  }
-  
-  .slide-left {
-    animation: slideLeftFade 0.5s ease forwards;
-  }
-  
-  .slide-right {
-    animation: slideRightFade 0.5s ease forwards;
-  }
-  
-  .fade-in {
-    animation: fadeInNewImage 0.5s ease forwards;
-  }
-  
-  @keyframes fadeInNewImage {
-    from {
-      opacity: 0;
-      transform: translateX(50px); /* petit effet arrivée */
-    }
-    to {
-      opacity: 1;
-      transform: translateX(0);
-    }
-  }
-
-  .fa-solid.fa-arrow-right:hover, .fa-solid.fa-arrow-left:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-}
-
 
 
 
@@ -510,9 +490,7 @@ header nav a:hover::after {
 
 /*---------------------PART-THREE-------------------*/
 .part-three {
-    z-index: 2;
     padding-top : 100px;
-    padding-bottom : 100px;
     margin : 0px 20px;
 }
 
@@ -533,7 +511,7 @@ header nav a:hover::after {
 }
 
 .part-three-line{
-    width: 300px;
+    width: 200px;
     height: 1px;
     background-color: #E5C394;
     margin: 0 auto;
@@ -541,7 +519,6 @@ header nav a:hover::after {
 
 .container-part-three {
     display : flex;
-    z-index: 2;
     margin : 0px;
     padding : 50px 10% 100px 10%;
 }
@@ -678,6 +655,124 @@ header nav a:hover::after {
 
 
 
+/*---------------------PART-FOUR--------------------*/
+
+.part-four {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom : 100px;
+    margin : 0px 5%;
+}
+
+.part-four h2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 65px;
+    font-family: "Playfair Display", serif;
+    font-weight : 300;
+    color : white;
+    margin: 0;   
+    padding-bottom : 20px;
+}
+
+.part-four p{
+    display : flex;
+    justify-content: center;
+    font-family : "Playfair Display", serif;
+    color : white;
+    font-weight: 300;
+    font-size: 25px;
+    padding-top : 20px;
+    margin : 0px 10%;
+}
+
+/*---------------------PART-FOUR-IMG-------------------*/
+
+.part-four-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top : 50px;
+    gap : 50px;
+}
+
+.part-four-img img{
+    border-radius : 5%;
+    border : white 1px solid;
+    width : 20%;
+    height : auto;
+    transition: transform 0.4s ease;
+    max-width: 300px;
+}
+
+.part-four-img img:hover {
+    transform: scale(1.1);
+    cursor : pointer;
+}
+
+/*---------------------PART-FOUR-IMG-------------------*/
+
+.part-four-img-bathroom {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top : 50px;
+    gap : 50px;
+    width : 90%;
+}
+
+.part-four-img-bathroom img{
+    border-radius : 5%;
+    border : white 1px solid;
+    width : 17%;
+    height: auto;
+    transition: transform 0.4s ease;
+    max-width: 300px;
+}
+
+.part-four-img-bathroom img:hover {
+    transform: scale(1.1);
+    cursor : pointer;
+}
+
+  
+/*---------------------PART-FOUR-ANIMATION-------------------*/
+
+  #lightbox img {
+    max-width: 90%;
+    max-height: 90%;
+    transform: scale(1.2);
+    transition: transform 0.3s ease;
+    border-radius: 10px;
+    box-shadow: 0 0 30px #000;
+  }
+  
+  #lightbox-close {
+    position: absolute;
+    top: 30px;
+    right: 40px;
+    font-size: 60px;
+    color: white;
+    cursor: pointer;
+    font-family: Arial, sans-serif;
+  }
+
+  #lightbox {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.9);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
 
 
 
@@ -689,3 +784,431 @@ header nav a:hover::after {
 
 
 
+
+/*---------------------PART-FIVE--------------------*/
+
+.part-five {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin : 0px 5%;
+    padding-bottom: 50px;
+}
+
+.part-five h2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 65px;
+    font-family: "Playfair Display", serif;
+    font-weight : 300;
+    color : white;
+    margin: 0;   
+    padding-bottom : 30px;
+}
+
+.part-five-line{
+    width: 300px;
+    height: 1px;
+    background-color: white;
+    margin: 0 auto;
+    margin-bottom: 40px;
+}
+
+
+/*-------------------PART-FIVE-CARDS-TARIFS------------------*/
+
+.part-five-container-prices {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, auto);
+    gap: 20px;
+    padding-top: 20px;;
+    margin: 0 auto;
+    width : 90%;
+}
+  
+.card-prices {
+    background-color:#f5f5dc;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    border-radius: 20px;
+    padding-bottom: 10px;
+    text-align: center;
+    border : 3px solid #E5C394;
+}
+
+.part-five-container-prices h3 {
+    font-family: "Playfair Display", serif;
+    color: black;
+    font-weight: 600;
+    font-size: 25px;
+    padding-bottom : 10px;
+    margin-bottom: 12px;
+    background-color: #E5C394;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    background-size: 10px;
+}
+
+.part-five-container-prices p {
+    color :black;
+    font-family:'Baskerville Old Face';
+    font-weight: 400;
+}
+
+
+
+/*---------------------PART-SIX-LOCATION--------------------*/
+
+.part-six {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom : 100px;
+    margin : 0px 5%;
+}
+
+.part-six h2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 65px;
+    font-family: "Playfair Display", serif;
+    font-weight : 300;
+    margin: 0;   
+    padding-bottom : 20px;
+    color : #E5C394;
+}
+
+.part-six-location{
+    display: flex;
+    padding-top : 50px;
+    color : white;
+    gap : 50px;
+}
+
+.map {
+    background-color: blanchedalmond;
+    width : 200px;
+    height : 200px;
+}
+
+/*----------------PART-SIX-EQUIPMENT--------------------*/
+
+.part-six-container-equipment h2{
+    display: flex;
+    justify-content: center;
+    color : #E5C394;
+    font-size : 65px;
+    font-family: "Playfair Display", serif;
+    font-weight : 300;
+    padding-bottom: 30px;
+}
+
+.part-six-container-equipment 
+
+.part-six-equipment {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, auto);
+    gap: 20px;
+    padding-bottom: 25px;
+    margin: 0 auto;
+    width : 90%;
+}
+
+.card-equipment {
+    background-color: #f5f5dc;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    border-radius: 20px;
+    text-align: center;
+    border : 3px solid #E5C394;
+}
+
+.part-six-equipment h3 {
+    font-family: "Playfair Display", serif;
+    color: black;
+    font-weight: 500;
+    font-size: 25px;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    padding-bottom : 20px;
+    background-color: #E5C394;
+}
+
+.part-six-equipment p {
+    color :black;
+    padding : 20px 0px;
+    font-family:'Baskerville Old Face';
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*--------------PART-SIX-HOUSE-RULES-------------------*/
+
+.container-part-six-house-rules-polices-notes {
+    display:flex;
+    margin : 0px 5%;
+    padding-top :20px;
+    padding-bottom : 40px;
+    border : 1px solid white;
+    background-color: #121212;
+}
+
+.part-six-house-rules {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin : 0px 5%;
+    width: 50%;
+}
+
+.container-part-six-house-rules-polices-notes h2 {
+    display: flex;
+    justify-content: center;
+    font-size: 40px;
+    color : #E5C394;
+    font-family: "Playfair Display", serif;
+}
+
+.container-part-six-house-rules-polices-notes h3 {
+    font-size: 30px;
+    color : white;
+    font-family: "Playfair Display", serif;
+    font-weight : 300;
+    padding-top : 20px;
+    
+}
+
+.container-part-six-house-rules-polices-notes p {
+    color :white;
+    font-weight: 400;
+    font-size: 22px;
+    font-family: 'Baskerville Old Face', serif;
+    padding : 20px 0px 0px 20px;
+}
+
+
+/*---------PART-SIX-POLICIES-AND-NOTES------------------*/
+
+.part-six-policies-and-notes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin : 0px 5%;
+    width : 50%;
+}
+
+.part-six-policies-and-notes p {
+    padding-top : 10px;
+    padding-left :0px;
+}
+
+.part-six-policies-and-notes .part-six-line-white{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.container-part-six-house-rules-polices-notes .part-six-line-white{
+    margin-top : 20px;
+    margin-bottom: 20px;
+}
+
+.part-six-policies-and-notes img {
+    margin-top : 70px;
+    width : 30%;
+    border : 1px solid white;
+    border-radius: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*----------------------CONTACT-----------------------*/
+
+.part-contact {
+    display: flex;
+    padding-bottom : 50px;
+    margin : 0px 10%;
+}
+
+.part-seven h2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 65px;
+    font-family: "Playfair Display", serif;
+    font-weight : 300;
+    color : white;
+    margin: 0;   
+    padding-bottom : 50px;
+    padding-top : 70px;
+}
+
+.part-contact-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width : 50%;
+}
+
+.part-contact-text h3{
+    font-family : "Playfair Display", serif;
+    color : white;
+    font-weight: 300;
+    font-size: 60px;
+}
+
+.part-contact-text p{
+    font-family : "Playfair Display", serif;
+    color : #E5C394;
+    font-weight: 300;
+    font-size: 20px;
+    padding-top : 20px;
+
+}
+
+/*---------------------FORMULAIRE-----------------------*/
+
+.part-contact-mail{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    background-color: transparent;
+    width : 50%;
+}
+
+
+.part-contact-mail form {
+    display: flex;
+    flex-direction: column;
+    width : 60%;
+    margin: auto;
+    gap : 10px;
+}
+  
+.part-contact-mail label {
+    margin-top: 10px;
+}
+  
+.part-contact-mail input, textarea {
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #E5C394;
+    background-color: transparent;
+    color: white;
+}
+
+textarea::placeholder,
+input::placeholder {
+    color: #E5C394;
+    opacity: 1;
+}
+  
+.part-contact-mail button {
+    display: flex;
+    justify-content: center;
+    background-color:#E5C394;
+    padding: 15px 0px;
+    color: black;
+    cursor: pointer;
+    margin-top: 20px;
+}
+  
+.part-contact-mail button:hover {
+    background-color: #45a049;
+}
+
+/*---------------------FOOTER-----------------------*/
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 0px;
+    background-color:	#121212;
+    color: white;
+    font-family: 'Playfair Display', serif;
+    font-size: 20px;
+}
+
+.logo-footer-eclipse{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    line-height: 1;
+    transform: none;
+    margin : 0px;
+    cursor : pointer;
+}
+
+footer button {
+    padding : 50px 0px;
+}
+
+.logo-footer-eclipse H3{
+    font-weight : 300;
+    font-family : 'FONTSPRING DEMO - Apparel', serif;
+}
+
+.logo-footer-eclipse h2{
+    font-family : "Playfair Display", serif;
+    font-size : 50px;
+    font-weight: 400;
+}
+
+.logo-footer-eclipse p {
+    font-family : serif;
+    font-size : 25px;
+    font-weight: 300;
+}
